News for the tz database


Release 2014c - 2014-05-13 07:44:13 -0700

  Changes affecting near-future time stamps

    Egypt observes DST starting 2014-05-15 at 24:00.
    (Thanks to Ahmad El-Dardiry and Gunther Vermier.)
    Details have not been announced, except that DST will not be observed
    during Ramadan.  Guess that DST will stop during the same Ramadan dates as
    Morocco, and that Egypt's future spring and fall transitions will be the
    same as 2010 when it last observed DST, namely April's last Friday at
    00:00 to September's last Thursday at 23:00 standard time.  Also, guess
    that Ramadan transitions will be at 00:00 standard time.

  Changes affecting code

    zic now generates transitions for minimum time values, eliminating guesswork
    when handling low-valued time stamps.  (Thanks to Arthur David Olson.)

    Port to Cygwin sans glibc.  (Thanks to Arthur David Olson.)

  Changes affecting commentary and documentation

    Remove now-confusing comment about Jordan.  (Thanks to Oleksii Nochovnyi.)


Release 2014b - 2014-03-24 21:28:50 -0700

  Changes affecting near-future time stamps

    Crimea switches to Moscow time on 2014-03-30 at 02:00 local time.
    (Thanks to Alexander Krivenyshev.)  Move its zone.tab entry from UA to RU.

    New entry for Troll station, Antarctica.  (Thanks to Paul-Inge Flakstad and
    Bengt-Inge Larsson.)  This is currently an approximation; a better version
    will require the zic and localtime fixes mentioned below, and the plan is
    to wait for a while until at least the zic fixes propagate.

  Changes affecting code

    'zic' and 'localtime' no longer reject locations needing four transitions
    per year for the forseeable future.  (Thanks to Andrew Main (Zefram).)
    Also, 'zic' avoids some unlikely failures due to integer overflow.

  Changes affecting build procedure

    'make check' now detects Rule lines defined but never used.